--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -6,12 +6,45 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 50px;
     padding: 0 3rem;
     background-color: #333;
+}
+
+header .logo {
+    font-size: 1.5rem;
+    font-weight: 600;
 }
 
 header nav ul {
     display: flex;
     gap: 1.5rem;
     list-style: none;
+}
+
+a[href="/cart"] {
+    position: relative;
+    margin: 0 5px;
+}
+
+.fa-cart-shopping,
+#cart-count {
+    color: #e3e3e3;
+}
+
+#cart-count {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(45%, -45%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2.5px solid #333;
+    background-color: #e3e3e3;
+    font-size: 12px;
+    color: #333;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
 }
