--- a/src/pages/ProductPage.css
+++ b/src/pages/ProductPage.css
@@ -94,7 +94,7 @@
     }
 }
 
-#add-to-cart-btn {
+#add-cart-btn {
     width: 100%;
     height: 59px;
     border: none;
@@ -115,6 +115,9 @@
 }
 
 #stock {
+    display: flex;
+    align-items: center;
+    gap: 10px;
     margin: 32px 0;
     font-size: 14px;
     font-weight: 500;
@@ -124,33 +127,34 @@
     }
 }
 
-#sub-buttons {
+#input-quantity {
     display: flex;
-}
+    align-items: center;
 
-#sub-buttons button {
-    width: 213px;
-    height: 64px;
-    background-color: #fff;
-    border: 2px solid #c9c9da;
-    border-radius: 8px;
-    font-size: 18px;
-
-    &:first-of-type {
-        margin-right: 11.7px;
+    input,
+    button {
+        height: 30px;
+        border: 1px solid #a3a3a3;
     }
 
-    & i {
-        margin-right: 10px;
-        font-size: 24px;
-        vertical-align: middle;
+    input,
+    button i {
+        color: #737373;
     }
 
-    &:hover {
-        box-shadow: 0px 4px 8px 3px #b3c1d954;
+    input {
+        width: 70px;
+        border-width: 1px 0;
+        outline: none;
+        text-align: center;
+        font-size: 16px;
     }
 
-    &:active {
-        background-color: #b3c1d954;
+    button {
+        width: 30px;
+
+        &:hover {
+            background-color: #e3e3e3;
+        }
     }
 }
