--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,10 @@
     color: #191847;
 }
 
+ul {
+    list-style: none;
+}
+
 a {
     font-weight: 500;
     color: #646cff;
@@ -33,8 +37,8 @@ button {
 }
 
 body {
-    margin: 0;
     display: flex;
+    flex-direction: column;
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
@@ -42,6 +46,11 @@ body {
 
 #app {
     max-width: 1280px;
-    margin: 0 auto;
+    margin: 50px auto 0;
     padding: 2rem;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: 600;
 }
