--- a/src/style.css
+++ b/src/style.css
@@ -22,11 +22,11 @@ ul {
 
 a {
     font-weight: 500;
-    color: #646cff;
+    color: #2d79f3;
     text-decoration: inherit;
 
     &:hover {
-        color: #535bf2;
+        color: #646cff;
     }
 }
 
@@ -45,12 +45,13 @@ body {
 }
 
 #app {
+    flex: 1;
     max-width: 1280px;
     margin: 50px auto 0;
     padding: 2rem;
 }
 
-.logo {
-    font-size: 1.5rem;
+.logo i {
+    font-size: 3rem;
     font-weight: 600;
 }
