--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -6,7 +6,7 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 60px;
     padding: 0 3rem;
     background-color: #333;
 }
@@ -41,4 +41,8 @@ a[href="/cart"] {
     width: 18px;
     height: 18px;
     border-radius: 50%;
+}
+
+header .logo i {
+    color: #e3e3e3;
 }
