--- a/src/pages/AuthPage.css
+++ b/src/pages/AuthPage.css
@@ -86,12 +86,12 @@ form label[for="remember"] {
 }
 
 .input-wrapper {
-    border: 1.5px solid #ecedec;
-    border-radius: 10px;
-    height: 50px;
     display: flex;
     align-items: center;
+    height: 50px;
     padding-left: 10px;
+    border: 1.5px solid #ecedec;
+    border-radius: 10px;
     transition: 0.2s ease-in-out;
 
     &:focus-within {
@@ -106,6 +106,10 @@ form label[for="remember"] {
         height: 100%;
         outline: none;
     }
+
+    input:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 1000px white inset;
+    }
 }
 
 .auth-link,
@@ -117,36 +121,4 @@ form h1 {
 .auth-link {
     font-weight: 600;
     margin-top: 10px;
-}
-
-/* Toastify */
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeOut {
-    from {
-        opacity: 1;
-        transform: translateY(0);
-    }
-    to {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-}
-
-.toastify {
-    animation: fadeOut 0.4s ease-in-out;
-}
-
-.toastify.on {
-    animation: fadeIn 0.3s ease-in-out;
 }
