--- a/src/style.css
+++ b/src/style.css
@@ -55,3 +55,35 @@ body {
     font-size: 3rem;
     font-weight: 600;
 }
+
+/* Toastify */
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+}
+
+.toastify {
+    animation: fadeOut 0.4s ease-in-out;
+}
+
+.toastify.on {
+    animation: fadeIn 0.3s ease-in-out;
+}
