--- a/src/layouts/Header.css
+++ b/src/layouts/Header.css
@@ -23,7 +23,7 @@ a[href="/cart"] {
 
 .fa-cart-shopping,
 #cart-count {
-    color: #e3e3e3;
+    color: #fff;
 }
 
 #cart-count {
@@ -35,9 +35,8 @@ a[href="/cart"] {
     justify-content: center;
     align-items: center;
     border: 2.5px solid #333;
-    background-color: #e3e3e3;
+    background-color: crimson;
     font-size: 12px;
-    color: #333;
     width: 18px;
     height: 18px;
     border-radius: 50%;
