--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,5 +1,6 @@
 .products-container {
     display: grid;
+    place-items: center;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 2rem 1rem;
     width: 1000px;
@@ -10,16 +11,38 @@
     }
 }
 
+#search-bar {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1rem;
+    width: 100%;
+    margin-bottom: 1rem;
+    padding-right: 20px;
+}
+
 #search-input {
+    width: 200px;
+    padding: 0.5rem;
+    border: 1px solid #a3a3a3;
+    border-radius: 5px;
     font-size: 16px;
 }
 
 #search-results {
     position: absolute;
+    top: 100%;
+    width: 350px;
     border: 1px solid #a3a3a3;
     border-radius: 5px;
     box-shadow: 0 0 10px #00000050;
     background-color: #fff;
+    z-index: 1;
+
+    p {
+        text-align: center;
+        padding: 10px;
+    }
 }
 
 .search-result-item {
@@ -43,14 +66,29 @@
 }
 
 #sorting-options {
+    position: absolute;
+    /* top: 50%; */
+    right: 10px;
+    /* transform: translateY(-50%); */
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 1rem;
     margin: 1rem 0;
+    padding: 1rem;
+    border: 1px solid #a3a3a3;
+    border-radius: 10px;
+    background-color: #fff;
+
+    select {
+        padding: 0.5rem;
+        border: 1px solid #a3a3a3;
+        border-radius: 5px;
+    }
 
     div {
         display: flex;
-        align-items: center;
+        flex-direction: column;
         gap: 0.5rem;
     }
 }
